--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -113,6 +113,7 @@
                     })) 
                     if (is_new_round){
                         endCountdown()
+                        location.href="/graphs/{{game_id}}"
                         // function goToGraphs(){
                         //     audio3.current.removeEventListener('ended', goToGraphs, { capture: true, once: true } )
                         //     location.href="/graphs/{{game_id}}"
