--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <meta name="mobile-web-app-capable" content="yes">
+        <meta property="og:title" content="NameGame">
+        <meta property="og:description" content="A multiplayer game for mobiles. Describe and guess than names of famous people and characters.">
+        <meta property="og:image" content="{{ url_for('static', filename='favicon.ico') }}">
         <title>NameGame</title>
         <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
