--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,5 +23,6 @@
         <button class="button1 button3" onclick="location.href='create_game';" id="create_game">Create Game</button>
         <button class="button1 button3" onclick="location.href='join_game';" id="join_game">Join Game</button>
         <button class="button2 self-centered" onclick="location.href='readme';" id="readme">Readme</button>
+        <button class="button2 self-centered" onclick="location.href='other';" id="other">Other</button>
     </body>
 </html>
