--- a/templates/Other/other.html
+++ b/templates/Other/other.html
@@ -17,5 +17,6 @@
         <h1 class="heading front-page" id="heading">OTHER PROJECTS</h1>
         <button class="button1 button3" onclick="location.href='gravitysim';" id="gravitySim">Gravity Sim</button>
         <button class="button1 button3" onclick="location.href='breathe';" id="breathe">Breathe</button>
+        <button class="button2 self-centered" onclick="location.href='/';" id="other">Home</button>
     </body>
 </html>
