--- a/templates/Other/breathe.html
+++ b/templates/Other/breathe.html
@@ -6,7 +6,8 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+
+        <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='otherstyle.css') }}">
         <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css') }}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <title>BreaTheFuak</title>
