--- a/templates/Other/breathe.html
+++ b/templates/Other/breathe.html
@@ -7,11 +7,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-        <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='otherstyle.css') }}">
+        
         <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css') }}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+itegrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossigin=nonymous">
         <title>BreaTheFuak</title>
         <style>
+            @font-face {
+
+    font-family: 'Poppins';
+
+    src: url('poppins.woff2') format('woff2');
+
+  }
             body{margin: 50px;font-family: "Poppins"; }
             h1,h4,h6,p{align-items: center; color: white; font-weight: 600;}
             i{color: white;}
