--- a/templates/write-names.html
+++ b/templates/write-names.html
@@ -73,7 +73,7 @@
                 var name_input = document.getElementById(`name_input${i}`)
                 var random_button = document.getElementById(`button${i}`)
                 var val = name_input.value
-                name_input.value = ""
+                name_input.value = "submitted"
                 random_button.setAttribute('disabled','')
                 name_input.setAttribute('disabled','')
                 if (val !== ""){
