--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -57,7 +57,7 @@
             React.useEffect(()=>{numPlayersRef.current = state.numPlayers},[state.numPlayers])
             React.useEffect(()=>{
                 
-                const newSocket = io.connect(window.origin, {query:"game_id={{game_id}}"})
+                const newSocket = io.connect(window.origin, {query:"game_id={{game_id}}&user_id={{user_id}}"})
 
                 //newSocket.onAny((eventName, ...args) => {console.log(eventName, args)})
 
@@ -292,7 +292,9 @@
                 ding()
                 document.getElementById("done_button").blur()
                 score_answer(nameRef.current.name_id, 1)
-                socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                setTimeout(()=>{
+                    socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                }, 200)
                 setState(prevState=>({
                     ...prevState,
                     doneButtonEnabled: false,
@@ -302,7 +304,13 @@
                         ...prevState,
                         doneButtonEnabled: true,
                     })
-                )}, 500)
+                )}, 640)
+            }
+
+            function skipName() {
+                score_answer(nameRef.current.name_id, 0)
+                socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                audio3.current.play()
             }
 
             function end_turn(names_ran_out=false) {
@@ -429,6 +437,7 @@
                     </div>}
                     <div class="flex-h mar-1em">
                         <button class="button2" onClick={()=>{location.href='/';}}>Home</button>
+                        {state.myTurn && <button id="skip_button" class="button2" onClick={()=>{skipName()}}>Skip</button>}
                     </div>
                 </body>
             )
