--- a/templates/name-game.html
+++ b/templates/name-game.html
@@ -292,7 +292,7 @@
                 ding()
                 document.getElementById("done_button").blur()
                 score_answer(nameRef.current.name_id, 1)
-                socket.current.emit("emit_next_name","{{game_id}}",state.userID)
+                //socket.current.emit("emit_next_name","{{game_id}}",state.userID)
                 setState(prevState=>({
                     ...prevState,
                     doneButtonEnabled: false,
