--- a/templates/other.html
+++ b/templates/other.html
@@ -15,8 +15,9 @@
     </head>
     <body class="lobby2 flex-v rainbow-gradient-bg animate-rainbow">
         <h1 class="heading front-page" id="heading">OTHER PROJECTS</h1>
+        <button class="button1 button3" onclick="location.href='/change_user';" id="changeUser">Change User</button>
         <button class="button1 button3" onclick="location.href='https://tomsembl.github.io/GravitySim-CSharp/';" id="gravitySim">Gravity Sim</button>
         <button class="button1 button3" onclick="location.href='https://raw.githack.com/tomsembl/breathe/main/breathefuak.html';" id="breathe">Breathe</button>
-        <button class="button2 self-centered" onclick="location.href='/';" id="other">Home</button>
+        <button class="button2 self-centered" onclick="location.href='/';" id="home">Home</button>
     </body>
 </html>
